--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   --secondary-color: #1b9999;
   --on-background: rgb(66, 66, 66);
   --background: rgb(255, 255, 255);
+  --on-background-alt: rgba(224, 219, 219, 0.5);
 }
 [data-theme="dark"] {
   --primary-color: rgb(150, 65, 255);
@@ -13,7 +14,7 @@
   --secondary-color: #03dac5;
   --on-primary: #000;
   --on-background: rgba(255, 255, 255, 0.9);
-  --on-background-alt: rgba(255, 255, 255, 0.7);
+  --on-background-alt: #121212a3;
   --background: #121212;
 }
 html {
@@ -45,7 +46,7 @@ nav {
   padding: 25px;
   z-index: 10;
   position: fixed;
-  background: rgba(224, 219, 219, 0.5);
+  background: var(--on-background-alt);
 }
 nav .links {
   font-size: 18px;
